[gd_scene load_steps=2 format=3 uid="uid://cmn507kem8ymm"]

[ext_resource type="Script" path="res://scripts/gpgs_controller.gd" id="1_k6exy"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k6exy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -85.0
offset_right = 102.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "PLAY"

[node name="SignIn" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "SIGN IN"

[node name="SignOut" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "SIGN OUT"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/SignIn" to="." method="_on_sign_in_pressed"]
[connection signal="pressed" from="VBoxContainer/SignOut" to="." method="_on_sign_out_pressed"]
